FIxed-bug-added-Jumpers

--- a/src/Paginator.css
+++ b/src/Paginator.css
@@ -28,23 +28,52 @@
   transform: scale(1.2);
 }
 .flache {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-.flache img {
-cursor: pointer;
   width: 25px;
   height: 25px;
-transition: 0.5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.flache img {
+  cursor: pointer;
+  width: 25px;
+  height: 25px;
+  transition: 0.5s;
 }
 
 .flache img:hover {
-transform: scale(1.2);
+  transform: scale(1.2);
 }
 #leftdds:active {
-    transform: translateX(-25px);
+  transform: translateX(-25px);
 }
 #rightfsf:active {
-    transform: translateX(25px);
+  transform: translateX(25px);
+}
+.jumper {
+  width: 25px;
+  height: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
+}
+.jumper:hover {
+  transform: scale(1.2);
+}
+.jumper img {
+  width: 15px;
+  height: 15px;
+  cursor: pointer;
+}
+.hefubuer {
+  width:  20%;
+  height: 40px;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  align-items: center;
 }
